# circle_pi

./: CMakeLists.txt  circle_pi.fbp
cmake/: PluginConfigure.cmake  PluginInstall.cmake  PluginLocalization.cmake  PluginPackage.cmake  gpl.txt  version.h.in
src/: circle_pi.cpp  circle_pi.h  circlegui.cpp  circlegui.h  circlegui_impl.cpp  circlegui_impl.h  degree_fix.sh  icons.cpp  icons.h  ocpn_plugin.h  version.h
